--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "electron": "^35.0.1",
+    "electron-builder": "^25.1.8",
+    "electron-debug": "^4.1.0",
+    "electron-reloader": "^1.2.3",
+    "npm-run-all": "^4.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "wait-on": "^8.0.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
